# ire

./: .gitignore  AST.hs  ASTUtils.hs  Common.hs  FunctionConversion.hs  HeapConversion.hs  LICENSE  LambdaLift.hs  Lexer.hs  Main.hs  NameTyper.hs  Namer.hs  Parser.hs  ParserCore.hs  Pass.hs  Target.hs  Tester.hs  TypeChecker.hs  Typer.hs  UnType.hs  build.py  compile.sh  configure.py  helloworld.ire  ire.cabal  readme.md  stack.yaml
.github/workflows/: ci.yml
AST/: AST.hs  ASTUtils.hs
CLI/: Main.hs  Tester.hs
Common/: Common.hs  Natives.hs  Pass.hs
IR/: CodeGen.hs  DirectCall.hs  LambdaLift.hs  Lowering.hs  Syntax.hs
LLVM/: Builder.hs  Syntax.hs  Types.hs
MLROC/: IRGen.hs  Syntax.hs
Parser/: Lexer.hs  Parser.hs  ParserCore.hs
Pass/: FunctionConversion.hs  HeapConversion.hs  LambdaLift.hs  NameTyper.hs  Namer.hs  TypeChecker.hs  Typer.hs  YieldInjection.hs
Runtime/: Makefile  entry_linux.c
compiler/AST/: AST.hs  ASTUtils.hs  Syntax.hs  Traversal.hs  TypeSystem.hs
compiler/Common/: Common.hs  Natives.hs  Pass.hs  Reporting.hs  Target.hs  Terminal.hs
compiler/IR/: CodeGen.hs  DirectCall.hs  GCPrepare.hs  HeapConversion.hs  IR.hs  Instances.hs  LambdaLift.hs  Lowering.hs  Monomorphization.hs  Syntax.hs  Utils.hs
compiler/LLVM/: Builder.hs  Syntax.hs  Types.hs
compiler/Parser/: Lexer.hs  Parser.hs  ParserCore.hs  ParserRels.hs
compiler/Pass/: HMTyper.hs  Identify.hs  NameTyper.hs  Namer.hs  Specialization.hs  SubScript.hs  Subtyper.hs  TypeChecker.hs  Typer.hs  UnSubScript.hs  UnType.hs  YieldInjection.hs
compiler/Pipeline/: Pipeline.hs  Relations.hs  Target.hs
docs/: compiler.md  language.md
llvm/: Syntax.hs  Types.hs
runtime/: Makefile  entry_linux.c  gc.c  gc.h  iretypes.h  linux_aarch64.h  linux_amd64.h  platform.h  rt.c  syscall_linux_amd64.ll  wrapper.c  wrapper.h
runtime/ryu/: common.h  d2s.c  d2s_intrinsics.h  ryu.h
stdlib/: base.ire  functional.ire  io.ire  system.ire  typical.ire
tests/: arithmetic.ire  arrays.ire  arrays2.ire  arraysize.ire  bool.ire  exit.ire  exitstdlib.ire  factorial.ire  fibonacci.ire  float.ire  fn.ire  gc1.ire  gc2.ire  helloworld.ire  hw.ire  import1.ire  import2.ire  inconsistenttyping.ire  occurscheck.ire  poly.ire  poly2.ire  poly2dep.ire  poly3.ire  readme.md  recordsget.ire  recordsset.ire  tabs.ire  test_gc.ire  unclosedcrparen.ire  variant.ire
tests/euler/: problem25.ire  readme.md
tests/regression/: 1.ire  2.ire  3.ire  4.ire  5.ire  readme.md
