cabal-version:       2.4
name:                ire
version:             0.0.0.0
build-type:          Simple

library
  default-language:    Haskell2010
  hs-source-dirs:      compiler
  exposed-modules:
      AST.AST
      AST.ASTUtils
      AST.Syntax
      AST.TypeSystem
      AST.Traversal
      Common.Common
      Common.Natives
      Common.Pass
      IR.IR
      IR.Instances
      IR.Utils
      IR.CodeGen
      IR.DirectCall
      IR.HeapConversion
      IR.LambdaLift
      IR.Monomorphization
      IR.Lowering
      IR.Syntax
      LLVM.Builder
      LLVM.Syntax
      LLVM.Types
      Parser.Lexer
      Parser.Parser
      Parser.ParserCore
      Parser.ParserRels
      Pass.NameTyper
      Pass.Namer
      Pass.TypeChecker
      Pass.Typer
      Pass.YieldInjection
      Pass.UnSubScript
      Pass.SubScript
      Pipeline.Target
      Pipeline.Relations
      Pipeline.Pipeline
  build-depends:     
      base >= 4.7 && < 5,
      mtl >= 2.2.2,
      text >= 1.2.3.2,
      bytestring >= 0.10.10.0,
      process >= 1.6.9.0,
      directory >= 1.3.6.0,
      filepath >= 1.4.1.2,
      ansi-terminal >=0.6.3.1,
      containers >= 0.6.2.1

executable irec
  main-is:             CLI/Main.hs
  ghc-options: -main-is CLI.Main
  default-language:    Haskell2010
  build-depends:
      base,
      ire

test-suite runtests
  type: exitcode-stdio-1.0
  main-is:             CLI/Tester.hs
  ghc-options: -main-is CLI.Tester
  default-language:    Haskell2010
  build-depends:
      base,
      process,
      directory,
      ire,
      filepath,
